# rnn

./: .gitignore  CMakeLists.txt  CREDITS  INSTALL  LICENSE  README  README.rst  TODO  make.gnu.inc  make.inc  make.intel.inc  makefile  set_env.sh
frame/: dgsknn_ref_impl.h  dgsnm.c  dgsrnn.c  dgsrnn_directKQuery.cpp  dgsrnn_ref.c  dgsrnn_ref_stl.cpp  gskm.c  gsknn.c  gsknn_heap.c  gsknn_ref.c  gsknn_ref_impl.h  gsknn_ref_stl.cpp  gsknn_util.c  rnn_heap.c  rnn_mergesort.c  rnn_util.c  sgsknn_ref_impl.h  strassen.c
frame/old/: dgsrnn_old.c  rnn_heap_old.c
include/: dgsrnn_directKQuery.hpp  dgsrnn_ref_stl.hpp  gsknn.h  gsknn_internal.h  gsknn_ref.h  gsknn_ref_stl.hpp  rnn.h
kernels/arm/neon/: gsknn_config.h  gsknn_kernel.h  knn_heapselect_ref_4.c  knn_r_int_4x4_row.c  knn_r_ref_4x4_row.c  knn_rank_k_int_4x4.c  knn_rank_k_ref_4x4.c  sq2nrm_ref_4x4.c
kernels/ref/: knn.c  rank_k.c  strassen.c
kernels/x86_64/haswell/: avx_types.h  gsknn_config.h  gsknn_kernel.h  knn_row_d8x6.c  rank_k_int_d8x6.c  rank_k_int_d8x6.h  rank_k_int_s16x6.h  sq2nrm_asm_d8x4.c  strassen_int_d8x6.c  strassen_int_d8x6.h
kernels/x86_64/sandybridge/: gsknn_config.h  gsknn_heapselect_int_d4.c  gsknn_kernel.h  knn_r_ref_s8x8_row.c  knn_rank_k_ref_s8x8.c  rnn_asm_d8x4.c  rnn_asm_d8x4_case2.c  rnn_asm_d8x4_var3.c  rnn_asm_d8x4_var3_case2.c  rnn_heap.c  rnn_kernel.h  rnn_merge_int_d4plus4.c  rnn_merge_int_dn.c  rnn_merge_int_dn_var2.c  rnn_r_1norm_int_d8x4_row.c  rnn_r_int_d8x4_row.c  rnn_rank_int_d4.c  rnn_rank_k_abs_int_d8x4.c  rnn_rank_k_asm_d8x4.c  sq2nrm_asm_d8x4.c
kernels/x86_64/sandybridge/old/: rnn_asm_d8x4_var3.c  rnn_bitonic_int_d8.c  rnn_int_d8x4.c  rnn_int_d8x4_var2.c  rnn_merge_int_d8.c  rnn_r1_int_d8x4.c  rnn_r_int_d8x4.c  rnn_r_int_d8x4_var3.c  rnn_sort_int_d4x4.c
lib/: .gitignore
matlab/: dgsknn.m  dgsknn_matlab.c  makefile  mex_compile.sh  test_dgsknn.m
python/: example.py  gsknn.py  wrapper.py
test/: makefile  run_dgsknn.sh  run_dgsrnn.sh  run_dgsrnn_directKQuery.sh  run_gskm.sh  run_gsknn.sh  tacc_run_dgsknn.sh  tacc_run_dgsrnn.sh  tacc_run_gsknn.sh  test_bitonic_d8.c  test_dgskm.c  test_dgsknn.c  test_dgsknn_stl.cpp  test_dgsnm.c  test_dgsrnn.c  test_dgsrnn_stl.cpp  test_dstrassen.c  test_merge_d4plus4.c  test_sgsknn.c  test_sgsknn_stl.cpp  test_sort_d4x4.c
test/old/: test_dgsrnn_directKQuery.cpp  test_merge_d8.c  test_merge_dn.c  test_rank_d4.c
